# Summer-Internship-Preassignment

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: block_heaviness.py  block_ratio.py  blockscale_benchmark.py  utils.py
docs/: docker_commands.md
outputs/block_heaviness/blocks10/data/: benchmark.csv  benchmark_20250517T235228.json
outputs/block_heaviness/results/: block_heaviness_2025-05-18_19-20-04.csv  block_heaviness_2025-05-18_19-20-04.json
outputs/block_ratio/blocks10/data/: benchmark.csv  benchmark_20250517T235210.json
outputs/block_ratio/blocks15/data/: benchmark.csv
outputs/block_ratio/results/: block_ratio_2025-05-18_19-20-09.csv  block_ratio_2025-05-18_19-20-09.json
outputs/blockscale_benchmark/blocks10/data/: benchmark.csv  benchmark_20250517T234317.json
outputs/blockscale_benchmark/blocks15/data/: benchmark.csv  benchmark_20250517T234322.json
outputs/blockscale_benchmark/blocks20/data/: benchmark.csv  benchmark_20250517T234329.json
outputs/blockscale_benchmark/blocks25/data/: benchmark.csv  benchmark_20250517T234339.json
outputs/blockscale_benchmark/blocks30/data/: benchmark.csv  benchmark_20250517T234353.json
outputs/blockscale_benchmark/blocks35/data/: benchmark.csv  benchmark_20250517T234411.json
outputs/blockscale_benchmark/blocks40/data/: benchmark.csv  benchmark_20250517T234433.json  (+1 more)
outputs/blockscale_benchmark/results/: benchmark_data_2025-05-18_20-01-42.json
src/: main.py
src/meta/: __init__.py  generator.py  utils.py
tests/: test_metadrive.py
(+15 files in other folders)
