[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadrive"
version = "0.1.0"
description = "MetaDrive simulation tool"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "pillow"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["src"] 