[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Summer Internship Pre-assignment"
version = "0.1.0"
description = "Summer Internship Project"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
    "pillow>=8.0.0",
    "pytest>=7.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]